# vdj-manager

./: .gitignore  CONTEXT.md  README.md  bunfig.toml  index.html  oxlintrc.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: architecture.md  audit-2026-04-25.md  implementation-status.md  tasks-completed.md  tech-debt.md
docs/adr/: 0001-browser-de-biblioteca-como-seam-principal.md  0002-patch-in-place-para-mutaciones-criticas-de-database.md
docs/plans/: 2026-07-15-radical-ui-workspaces.md
docs/ui/: view-contracts.md
docs/vdj-docs/: README.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  mutation_journal.rs  safety.rs
src-tauri/src/commands/: configs.rs  database.rs  duplicates.rs  files.rs  mod.rs  playlists.rs  recovery.rs  waveforms.rs
src-tauri/src/database/: mod.rs  models.rs  parser.rs
src-tauri/tests/: database_write.rs  mutation_journal.rs  resource_write.rs
src-tauri/tests/fixtures/: database_minimal.xml  database_unknown_attrs.xml
src/components/: CodeEditor.tsx  Dialog.tsx  ErrorBoundary.tsx  FolderTree.tsx  IntegrityWorkspace.tsx  Layout.tsx  MutationBlockedNotice.tsx  PaneSeparator.tsx  RecoveryCenter.tsx  ResourceStudio.tsx  SafetyInspector.tsx  Sidebar.tsx  (+7 more)
tests/: Dialog.test.tsx  PaneSeparator.test.tsx  SongTableKeyboard.test.tsx  UiErrorNotice.test.tsx  demoData.test.ts  navigation.test.ts  operationalState.test.ts  paneLayout.test.ts  runtimeServices.test.ts  theme.test.ts  uiError.test.ts
(+119 files in other folders)
